--- a/.github/workflows/run_default_test.yml
+++ b/.github/workflows/run_default_test.yml
@@ -3,14 +3,14 @@ name: default test
 on: [push]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          sudo apt install iverilog
+          sudo apt install iverilog tcsh
       - name: Test default with runtest
         run: |
           cd run
